--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -52,7 +52,7 @@
     <section class="p-5">
       <div class="container">
         <center>
-        <img src="../Grafiken/Avatok.png" alt="SMlogo" width="250">
+        <a href="https://linktr.ee/avatok"><img src="../Grafiken/Avatok.png" alt="SMlogo" width="250"></a>
 <br>
 <br>
         <h3>Pascal (Avatok)</h3>
@@ -86,11 +86,11 @@
         <br>
         <br>
           <div class="col">
-            <b>Name</b><br>
+            <b>Avatok</b><br>
             <a href="https://github.com/Avatok"><img src="../Grafiken/Social/GitHub.svg" alt="GH"></a>
         <br>
         <br>
-            <b>Name</b><br>
+            <b>Avatok_</b><br>
             <a href="https://de.fiverr.com/avatok_"><img src="../Grafiken/Social/Fiverr.svg" alt="Fvrr"></a>
           </div>
         <br>
