--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@
 <br>
                           <b>Adobe Illustrator</b><br>
                           <a href="https://www.adobe.com/at/products/illustrator.html"><img src="Grafiken/Software/Illustrator.svg" alt="Illustrator" /></a>
+<br>
+<br>
+                          <b>Adobe After FX</b><br>
+                          <a href="https://www.adobe.com/at/products/aftereffects.html"><img src="Grafiken/Software/AfterFX.svg" alt="AfterFX" /></a>
                         </div>
 <br>
 <br>
@@ -199,8 +203,8 @@
 <br>
 <br>
                         <div class="col">
-                          <b>Adobe After FX</b><br>
-                          <a href="https://www.adobe.com/at/products/aftereffects.html"><img src="Grafiken/Software/AfterFX.svg" alt="AfterFX" /></a>
+                          <b>Lua Scripting</b><br>
+                          <a href="https://www.lua.org/"><img src="Grafiken/Software/Lua-Logo.svg" alt="Lua" /></a>
                         </div>
 <br>
 <br>
