--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -209,7 +209,7 @@
     </div>
 <br>
 <br>
-    <h3>Website´s</h3>
+    <h3>Other Stuff</h3>
 <br>
     <div id="carouselExample4" class="carousel slide">
       <div class="carousel-inner">
