--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -63,9 +63,21 @@
             <img src="../Grafiken/Software/Lua-Logo.svg" class="card-img-top m-2" style="width: 5rem;" alt="...">
             </center>
             <div class="card-body">
-              <h5 class="card-title">[Standalone] FiveM Blips</h5>
+              <h5 class="card-title">[Standalone] FiveM Blips v1</h5>
               <p class="card-text">FiveM Costum Blips (Map Marker) for Grand Theft Auto Roleplay 5 Server.</p>
-              <a href="https://github.com/Avatok/FiveM-Exec-Command-Ped" class="btn btn-primary">Download Now</a>
+              <a href="https://github.com/Avatok/FiveM-Blips-v1" class="btn btn-primary">Download Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="card" style="width: 18rem;">
+            <center>
+            <img src="../Grafiken/Software/Lua-Logo.svg" class="card-img-top m-2" style="width: 5rem;" alt="...">
+            </center>
+            <div class="card-body">
+              <h5 class="card-title">[Standalone] FiveM Blips v2</h5>
+              <p class="card-text">FiveM Costum Blips (Map Marker) for Grand Theft Auto Roleplay 5 Server.</p>
+              <a href="https://github.com/Avatok/FiveM-Blips-v2" class="btn btn-primary">Download Now</a>
             </div>
           </div>
         </div>
