--- a/Unterseiten/Services.html
+++ b/Unterseiten/Services.html
@@ -100,6 +100,7 @@
               <li>Joomla</li>
               <li>C++ / C / c#</li>
               <li>Reaper (Audio)</li>
+              <li>PC Configuration & Building</li>
               <li>...</li>
             </ul>
           </div>
