--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -250,6 +250,7 @@
               <li>Joomla</li>
               <li>C++ / C / C#</li>
               <li>Reaper (Audio)</li>
+              <li>PC Configuration & Building</li>
               <li>...</li>
             </ul>
           </div>
