--- a/index.html
+++ b/index.html
@@ -83,11 +83,17 @@
                 <button class="accordion-button collapsed" id="Q1" type="button" data-bs-toggle="collapse" data-bs-target="#question-one">Main questions</button>
                   <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#questions">
                   <div class="accordion-body">
+                      <h3>Main Information</h3>
                     <ul>
                       <li><b>Name: </b> Pascal</li>
                       <li><b>Age: </b> 18</li>
                       <li><b>Place of residence: </b> austria</li>
                       <li><b>Work: </b> pupil</li>
+                    </ul>
+                      <h3>Languages</h3>
+                    <ul>
+                        <li>German / Deutsch</li>
+                        <li>English / Englisch</li>
                     </ul>
                   </div>
                   </div>
