--- a/Unterseiten/Portfolio/nvidia-logo-animation.html
+++ b/Unterseiten/Portfolio/nvidia-logo-animation.html
@@ -46,14 +46,14 @@
     <!--Main-->
     <section class="py-5">
         <div class="container">
-          <h1 class="display-4">Nvidia Logo Animation mit Sound</h1>
+          <h1 class="display-4">Nvidia Logo Animation with Sound</h1>
           <div class="row mt-4">
             <div class="col-lg-6">
               <h2 class="h3">Die Fertige Animation</h2>
               <iframe width="100%" height="315" src="https://www.youtube.com/embed/uTB7HUFHFjo?si=4MKOy92EO3UDnRej" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div class="col-lg-6">
-              <h2 class="h3">Arbeitschritte</h2>
+              <h2 class="h3">Work steps</h2>
               <ol class="list-group list-group-numbered">
                 <li class="list-group-item">Collection of ideas</li>
                 <li class="list-group-item">Create a storyboard</li>
