--- a/Unterseiten/Portfolio/Cyberpunk-Asus.html
+++ b/Unterseiten/Portfolio/Cyberpunk-Asus.html
@@ -44,35 +44,35 @@
     </nav>
     <!--End-Navigation-->
     <!--Main-->
-      <section class="py-5">
-        <div class="container">
-            <h1 class="display-4">Cyberpunk & Asus Logo Animation mit Sound</h1>
-            <div class="row mt-4">
-                <div class="col-lg-6">
-                    <h2 class="h3">Die Fertige Animation</h2>
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/pdB18688zH8?si=CJblN5UkYBnc_nvm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </div>
-                <div class="col-lg-6">
-                    <h2 class="h3">Arbeitschritte</h2>
-                    <ol class="list-group list-group-numbered">
-                      <li class="list-group-item">Kreativitätsphase: Ideen sammeln</li>
-                      <li class="list-group-item">Erstellung des Storyboards</li>
-                      <li class="list-group-item">Beschaffung von Bildmaterial</li>
-                      <li class="list-group-item">Anpassung des Materials (Illustrator)</li>
-                      <li class="list-group-item">Erstellung der Logo-Animation (After Effects)</li>
-                      <li class="list-group-item">Beschaffung von Tonmaterial</li>
-                      <li class="list-group-item">Vertonung der finalen Animation</li>
-                      <li class="list-group-item">Rendern des Projekts</li>
-                    </ol>
-                </div>
-            </div>
-            <div class="container mt-4">
-              <h1>Wichtige Informationen zur Verwendung von Cyberpunk & Asus Bild- & Videomaterial</h1>
-              <p>Das Spiel Cyberpunk 2077 und die Asus Corporations schätzen das Interesse und die Unterstützung, die sie von der Community erhalten. Die Logos und Marken sind wichtige Bestandteile ihrer Identität und des Markenimages.</p>
-              <p>Bitte beachten Sie jedoch, dass die Verwendung von Cyberpunk und Asus Logos bestimmten Bedingungen und Richtlinien unterliegt, um sicherzustellen, dass die Markenintegrität gewahrt bleibt und keine Missverständnisse entstehen. Bevor Sie das Bild- und Videomaterial verwenden, empfehle ich dringend, um Erlaubnis zur Nutzung bei den entsprechenden Markeninhabern anzufragen.</p>
+    <section class="py-5">
+      <div class="container">
+        <h1 class="display-4">Cyberpunk & Asus Logo Animation with Sound</h1>
+        <div class="row mt-4">
+          <div class="col-lg-6">
+            <h2 class="h3">The Finished Animation</h2>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/pdB18688zH8?si=CJblN5UkYBnc_nvm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+          <div class="col-lg-6">
+            <h2 class="h3">Workflow Steps</h2>
+            <ol class="list-group list-group-numbered">
+              <li class="list-group-item">Creative Phase: Collecting Ideas</li>
+              <li class="list-group-item">Storyboard Creation</li>
+              <li class="list-group-item">Acquisition of Visual Material</li>
+              <li class="list-group-item">Material Adjustment (Illustrator)</li>
+              <li class="list-group-item">Logo Animation Creation (After Effects)</li>
+              <li class="list-group-item">Acquisition of Audio Material</li>
+              <li class="list-group-item">Soundtracking the Final Animation</li>
+              <li class="list-group-item">Rendering the Project</li>
+            </ol>
           </div>
         </div>
-      </section>
+        <div class="container mt-4">
+          <h1>Important Information Regarding the Use of Cyberpunk & Asus Image and Video Material</h1>
+          <p>The game Cyberpunk 2077 and Asus Corporation appreciate the interest and support they receive from the community. Logos and trademarks are crucial components of their identity and brand image.</p>
+          <p>However, please note that the use of Cyberpunk and Asus logos is subject to specific terms and guidelines to ensure the preservation of brand integrity and to prevent any misunderstandings. Before using the image and video material, I strongly recommend seeking permission from the respective trademark owners.</p>
+        </div>
+      </div>
+    </section>
 <br>
 <br>
 <br>
