--- a/Unterseiten/Portfolio/nvidia-logo-animation.html
+++ b/Unterseiten/Portfolio/nvidia-logo-animation.html
@@ -49,11 +49,11 @@
           <h1 class="display-4">Nvidia Logo Animation with Sound</h1>
           <div class="row mt-4">
             <div class="col-lg-6">
-              <h2 class="h3">Die Fertige Animation</h2>
+              <h2 class="h3">The Finished Animation</h2>
               <iframe width="100%" height="315" src="https://www.youtube.com/embed/uTB7HUFHFjo?si=4MKOy92EO3UDnRej" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div class="col-lg-6">
-              <h2 class="h3">Work steps</h2>
+              <h2 class="h3">Workflow Steps</h2>
               <ol class="list-group list-group-numbered">
                 <li class="list-group-item">Collection of ideas</li>
                 <li class="list-group-item">Create a storyboard</li>
