--- a/index.html
+++ b/index.html
@@ -113,29 +113,44 @@
                     GPU - ASUS Rog Strix Geforce RTX 3090 24GB<br>
                     MB - ASUS B550-E Gaming<br>
                     RAM - Corsair Vengeance RGB 4x16GB (64GB) 3600Mhz<br>
-                    Speicherplatz - 3,5TB (M.2 Nvme & SATA SSD) & 4TB (SATA HDD)<br>
+                    Speicherplatz - 512GB + 2TB m.2 NVMe SSD + 1TB SATA SSD (3,5TB)<br>
                     Gehäuse - Lian Li O11 Dynamic in Schwarz<br>
                     Lüfter: 9x Corsair QL120 + 3 Corsair ML120 (AIO Standard Lüfter)<br>
                     Netzteil: Corsair RM850x 80 Plus Gold<br>
 <br>
                     <b>Monitor Setup:</b><br>
-                    3x HP X27q<br>
-                    1x ASUS VG248QE<br>
+                    1x Artic Z3 Pro Gen3<br>
+                    3x HP X27q (27" - 165hz - 2.560 x 1.440 Pixel)<br>
+                    1x Ferneseher (32" - 60hz - 1920 x 1080 Pixel)<br>
 <br>
                     <b>Peripherie:</b><br>
                     Tastatur - Corsair K55 RGB PRO XT<br>
+                    Tastatur AddOn - Corsair iCUE Nexus<br>
                     Maus - Corsair M65 RGB Elite<br>
-                    Headset - Corsair HS60 Pro<br>
-                    Mikrofon - AUNA MIC 900B<br>
+                    Headset - Beyerdynamic DT 770 Pro (80 Ohm)<br>
+                    Mikrofon - Shure MV7 black<br>
+                    Mischpult - TC Helicon GoXLR mini<br>
                     Lautpsrecher - Logitech Z906<br>
                     Special Gadget - Elgato Stream Deck<br>
                     Webcam - Streamplify Cam (FullHD/60FPS)<br>
+<br>
 <br>
                     <b>Notebook:</b><br>
                     CPU - AMD Ryzen 5 4600H<br>
                     GPU - Nvidia Geforce GTX 1650Ti 4GB<br>
                     RAM - SkHynix 2x8GB (16GB) 3200Mhz<br>
-                    Speicherplatz - 750GB (M.2 Nvme)<br>
+                    Speicherplatz - 512GB + 256GB NVMe SSD (750GB)<br>
+                      
+                    <b>Peripherie:</b><br>
+                    Tastatur - Corsair K55 RGB PRO XT<br>
+                    Maus - Corsair M55 RGB Pro black<br>
+                    Headset - Corsair HS60 Pro<br>
+                    Mikrofon - AUNA MIC 900B<br>
+
+                    <b>Monitor Setup:</b><br>
+                    1x Lenovo (15,6" - 120hz - 1920 x 1080 Pixel)<br>
+                    1x ASUS VG248QE (24" - 60hz - 1920 x 1080 Pixel)<br>
+                      
 <br>
                     <b>Konsole:</b><br>
                     Playstation 4 Standard Edition<br>
