--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -86,13 +86,13 @@
     </div>
     <div class="row text-center">
         <div class="col">
-            <b>Cooming Soon</b><br>
-            <a href="https://www.youtube.com/"><img src="../Grafiken/Social/Youtube.svg" alt="Fvrr"></a>
+            <b>Avatok</b><br>
+            <a href="https://www.youtube.com/@Avatok"><img src="../Grafiken/Social/Youtube.svg" alt="Youtube"></a>
         </div>
     
         <div class="col">
             <b>Cooming Soon</b><br>
-            <a href="https://www.youtube.com/"><img src="../Grafiken/Social/Youtube.svg" alt="TikTok"></a>
+            <a href="https://www.youtube.com/"><img src="../Grafiken/Social/Youtube.svg" alt="Youtube"></a>
         </div>
     </div>
 </div>
