--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     1x Ferneseher (32" - 60hz - 1920 x 1080 Pixel)<br>
 <br>
                     <b>Peripherie:</b><br>
-                    Tastatur - Corsair K55 RGB PRO XT<br>
+                    Tastatur - Corsair K70 RGB MK.2 Low Profile<br>
                     Tastatur AddOn - Corsair iCUE Nexus<br>
                     Maus - Corsair M65 RGB Elite<br>
                     Headset - Beyerdynamic DT 770 Pro (80 Ohm)<br>
