--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 Hello, my name is Avatok (Pascal) and I'm 18 years old.
               </p>
               <p class="lead">
-                I live in Austria and have been working with computer hardware and software since I was young. Since I'm also attending a secondary school for information technology, I keep learning new things.
+                I live in Austria and have been working with computer hardware and software since I was young. Since I'm also attending a vocational school for information technology, I keep learning new things.
               </p>
               <a class="btn btn-light mt-3" id="Q1" onclick="ScrollDown()" data-bs-toggle="collapse" data-bs-target="#question-one">
                 <i class="bi bi-chevron-right">Read More</i>
@@ -115,7 +115,7 @@
                     RAM - Corsair Vengeance RGB 4x16GB (64GB) 3600Mhz<br>
                     Storage - 512GB + 2TB m.2 NVMe SSD + 1TB SATA SSD (3,5TB)<br>
                     Case - Lian Li O11 Dynamic in Schwarz<br>
-                    Fans: 9x Corsair QL120 + 3 Corsair ML120 (AIO Standard Lüfter)<br>
+                    Fans: 9x Corsair QL120 + 3 Corsair ML120 (AIO Standard Fans)<br>
                     PSU: Corsair RM850x 80 Plus Gold<br>
 <br>
                     <b>Monitor Setup:</b><br>
