--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
                         <li>German / Deutsch</li>
                         <li>English / Englisch</li>
                     </ul>
+                      <h3>Degrees and awards</h3>
+                    <ul>
+                        <li>CCNAv7: Introduction to Networks</li>
+                        <li>CCNAv7: Switching, Routing, and Wireless Essentials</li>
+                    </ul>
                   </div>
                   </div>
               </div>
