--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
                     <b>Monitor Setup:</b><br>
                     1x Lenovo (15,6" - 120hz - 1920 x 1080 Pixel)<br>
                     1x ASUS VG248QE (24" - 60hz - 1920 x 1080 Pixel)<br>
-                      
+<br>                      
 <br>
-                    <b>Konsole:</b><br>
+<br>
+                    <b>Konsolen:</b><br>
                     Playstation 4 Standard Edition<br>
                     XBox 360 Limited Edition (Halo 4)<br>
                   </p>
