--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     MB - ASUS B550-E Gaming<br>
                     RAM - Corsair Vengeance RGB 4x16GB (64GB) 3600Mhz<br>
                     Storage - 512GB + 2TB m.2 NVMe SSD + 1TB SATA SSD (3,5TB)<br>
-                    Case - Lian Li O11 Dynamic in Schwarz<br>
+                    Case - Lian Li O11 Dynamic in black<br>
                     Fans: 9x Corsair QL120 + 3 Corsair ML120 (AIO Standard Fans)<br>
                     PSU: Corsair RM850x 80 Plus Gold<br>
 <br>
