--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -123,21 +123,21 @@
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/CoomingSoon.html" class="item-wrap fancybox">
+            <a href="Portfolio/itweb_Fair-Marketing.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>itweb Leistungßs Seite</h3>
+                <h3>itweb Leistung´s Seite</h3>
                 <span>Figma, Wordpress & Advanced Costum Fields</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_2.jpg">
+              <img class="img-fluid" src="../Grafiken/Portfolio/Itweb.png">
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/CoomingSoon.html" class="item-wrap fancybox">
+            <a href="Portfolio/itweb_glossary.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>itweb Glossar</h3>
-                <span>Wordpress & Advanced Costum Fields</span>
+                <span>Figma, Wordpress & Advanced Costum Fields</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_2.jpg">
+              <img class="img-fluid" src="../Grafiken/Portfolio/Itweb.png">
             </a>
           </div>
           <div class="item adobe col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -263,15 +263,17 @@
     <footer class="p-3 bg-dark text-white text-center fixed-bottom">
       <div class="container">
         <div class="row text-center">
-          <div class="col">
-            <a href="Imprint.html"><p class="lead" style="color:#caf8a3">Imprint/privacy policy</p></a>
+          <div class="col-md-4">
+            <a href="Unterseiten/Imprint.html">
+              <p class="lead" style="color:#caf8a3">Imprint/privacy policy</p>
+            </a>
           </div>
-
-          <div class="col">
+    
+          <div class="col-md-4">
             <p class="lead">Copyright &copy; 2023 Pascal - Avatok</p>
           </div>
-
-          <div class="col">
+    
+          <div class="col-md-4">
             <a href="#">
               <i class="bi bi-arrow-up-circle h2 icon-color"></i>
             </a>
