--- a/Unterseiten/Portfolio/itweb_Fair-Marketing.html
+++ b/Unterseiten/Portfolio/itweb_Fair-Marketing.html
@@ -89,7 +89,7 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-md-4">
-            <a href="Unterseiten/Imprint.html">
+            <a href="../Imprint.html">
               <p class="lead" style="color:#caf8a3">Imprint/privacy policy</p>
             </a>
           </div>
