--- a/index.html
+++ b/index.html
@@ -260,25 +260,27 @@
 <br>
     <!--Footer-->
     <footer class="p-3 bg-dark text-white text-center fixed-bottom">
-        <div class="container">
-          <div class="row text-center">
-            <div class="col">
-              <a href="Unterseiten/Imprint.html"><p class="lead" style="color:#caf8a3">Imprint/privacy policy</p></a>
-            </div>
-  
-            <div class="col">
-              <p class="lead">Copyright &copy; 2023 Pascal - Avatok</p>
-            </div>
-  
-            <div class="col">
-              <a href="#">
-                <i class="bi bi-arrow-up-circle h2 icon-color"></i>
-              </a>
-            </div>
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md-4">
+            <a href="Unterseiten/Imprint.html">
+              <p class="lead" style="color:#caf8a3">Imprint/privacy policy</p>
+            </a>
+          </div>
+    
+          <div class="col-md-4">
+            <p class="lead">Copyright &copy; 2023 Pascal - Avatok</p>
+          </div>
+    
+          <div class="col-md-4">
+            <a href="#">
+              <i class="bi bi-arrow-up-circle h2 icon-color"></i>
+            </a>
           </div>
         </div>
-      </footer>
-      <!--End-Footer-->
+      </div>
+    </footer>
+    <!--End-Footer-->
     <!--Java Script-->
     <script src="bs_8.19.2/js/bootstrap.bundle.min.js"></script>
     <script src="JavaScript/code.js"></script> 
