--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -194,6 +194,15 @@
               <img class="img-fluid" src="assets/img/img_4.jpg">
             </a>
           </div>
+          <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="Portfolio/CoomingSoon.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Wordpress WooCoomerce Betreuung</h3>
+                <span>WooCoomerce Artikel einfügen, bearbeiten und löschen</span>
+              </div>
+              <img class="img-fluid" src="assets/img/img_4.jpg">
+            </a>
+          </div>
         </div>
       </div>
     </section><!-- End  Works Section -->
