--- a/Unterseiten/Services.html
+++ b/Unterseiten/Services.html
@@ -110,7 +110,7 @@
   </main>
 
     <!--Footer-->
-    <footer class="p-3 bg-dark text-white text-center fixed-bottom">
+    <footer class="p-3 bg-dark text-white text-center">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-4">
