--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -269,7 +269,7 @@
   </main><!-- End #main -->
 
     <!--Footer-->
-    <footer class="p-3 bg-dark text-white text-center fixed-bottom">
+    <footer class="p-3 bg-dark text-white text-center">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-4">
