--- a/Unterseiten/Contact.html
+++ b/Unterseiten/Contact.html
@@ -97,7 +97,7 @@
   <p>The contact form is not yet ready for use. <br> Please email me directly at 'avatok.business@gmail.com'! <br><br> Thank you for understanding <br> -Pascal</p>
 </div>
     <!--Footer-->
-    <footer class="p-3 bg-dark text-white text-center fixed-bottom">
+    <footer class="p-3 bg-dark text-white text-center">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-4">
