--- a/Unterseiten/Portfolio/Cyberpunk-Asus.html
+++ b/Unterseiten/Portfolio/Cyberpunk-Asus.html
@@ -82,7 +82,7 @@
 <br>
     <!--End-Main-->
     <!--Footer-->
-    <footer class="p-3 bg-dark text-white text-center fixed-bottom">
+    <footer class="p-3 bg-dark text-white text-center">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-4">
