--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 <br>
 <br>
     <!--Footer-->
-    <footer class="p-3 bg-dark text-white text-center sticky-bottom">
+    <footer class="p-3 bg-dark text-white text-center">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-4">
