--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -96,7 +96,7 @@
 <br>
 <br>
     <!--Footer-->
-    <footer class="p-3 bg-dark text-white text-center">
+    <footer class="p-3 bg-dark text-white text-center fixed-bottom">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-4">
