--- a/Unterseiten/Imprint.html
+++ b/Unterseiten/Imprint.html
@@ -414,8 +414,10 @@
 <br>
 <br>
 <br>
+<br>
+<br>
     <!--Footer-->
-    <footer class="p-3 bg-dark text-white text-center">
+    <footer class="p-3 bg-dark text-white text-center fixed-bottom">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-4">
