--- a/Unterseiten/Services.html
+++ b/Unterseiten/Services.html
@@ -115,7 +115,7 @@
 <br>
 <br>
     <!--Footer-->
-    <footer class="p-3 bg-dark text-white text-center fixed-bottom">
+    <footer class="p-3 bg-dark text-white text-center">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-4">
