--- a/index.html
+++ b/index.html
@@ -125,16 +125,15 @@
 <br>
                     <b>Monitor Setup:</b><br>
                     1x Artic Z3 Pro Gen3<br>
-                    3x HP X27q (27" - 165hz - 2.560 x 1.440 Pixel)<br>
-                    1x TV (32" - 60hz - 1920 x 1080 Pixel)<br>
+                    1x HP X27q (27" - 165hz - 2.560 x 1.440 Pixel)<br>
+                    2x LG 27GN800P-B (27" - 144hz - 2.560 x 1.440 Pixel)<br>
+                    1x Thomson 32HU3253C (32" - 60hz - 1920 x 1080 Pixel)<br>
 <br>
                     <b>Peripherie:</b><br>
                     Keyboard - Corsair K70 RGB MK.2 Low Profile<br>
-                    Keyboard AddOn - Corsair iCUE Nexus<br>
                     Mice - Corsair M65 RGB Elite<br>
                     Headset - Beyerdynamic DT 770 Pro (80 Ohm)<br>
-                    Microphone - Shure MV7 black<br>
-                    Mixer - TC Helicon GoXLR mini<br>
+                    Microphone - AUNA MIC 900B<br>
                     Speaker - Logitech Z906<br>
                     Special Gadget - Elgato Stream Deck<br>
                     Webcam - Streamplify Cam (FullHD/60FPS)<br>
