--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -69,75 +69,75 @@
         </div>
         <div id="portfolio-grid" class="row no-gutter">
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/CoomingSoon.html" class="item-wrap fancybox">
+            <a href="https://nutricanis.live" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Feines Futter Marken Seite</h3>
+                <h3>Feines Futter Marken Seite (Nutricanis)</h3>
                 <span>Figma, Wordpress & Elementor Pro</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_2.jpg">
+              <img class="img-fluid" alt="Nutricanis" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/CoomingSoon.html" class="item-wrap fancybox">
+            <a href="https://defu.live" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Feines Futter Marken Seite</h3>
+                <h3>Feines Futter Marken Seite (Defu)</h3>
                 <span>Figma, Wordpress & Elementor Pro</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_2.jpg">
+              <img class="img-fluid" alt="Defu" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/CoomingSoon.html" class="item-wrap fancybox">
+            <a href="https://herrmanns.live/" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Feines Futter Marken Seite</h3>
-                <span>Figma, Wordpress & Elementor Pro</span>
+                <span>Figma, Wordpress & Elementor Pro (Herrmanns)</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_2.jpg">
+              <img class="img-fluid" alt="Herrmanns" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/CoomingSoon.html" class="item-wrap fancybox">
+            <a href="https://rosinasfinest.live/" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Feines Futter Marken Seite</h3>
+                <h3>Feines Futter Marken Seite (Rosinas Finest)</h3>
                 <span>Figma, Wordpress & Elementor Pro</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_2.jpg">
+              <img class="img-fluid" alt="Rosinas Finest" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/CoomingSoon.html" class="item-wrap fancybox">
+            <a href="https://fraisl.live/" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Feines Futter Marken Seite</h3>
+                <h3>Feines Futter Marken Seite (Fraisl)</h3>
                 <span>Figma, Wordpress & Elementor Pro</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_2.jpg">
+              <img class="img-fluid" alt="Fraisl" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/CoomingSoon.html" class="item-wrap fancybox">
+            <a href="https://napani.live/" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Feines Futter Marken Seite</h3>
+                <h3>Feines Futter Marken Seite (Napani)</h3>
                 <span>Figma, Wordpress & Elementor Pro</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_2.jpg">
+              <img class="img-fluid" alt="Napani" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/itweb_Fair-Marketing.html" class="item-wrap fancybox">
+            <a href="https://itweb.at/leistungen/messe-marketing/" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>itweb Leistung´s Seite</h3>
                 <span>Figma, Wordpress & Advanced Costum Fields</span>
               </div>
-              <img class="img-fluid" src="../Grafiken/Portfolio/Itweb.png">
+              <img class="img-fluid" alt="itweb Leistungen" src="../Grafiken/Portfolio/Itweb.png">
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/itweb_glossary.html" class="item-wrap fancybox">
+            <a href="https://itweb.at/glossar/" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>itweb Glossar</h3>
                 <span>Figma, Wordpress & Advanced Costum Fields</span>
               </div>
-              <img class="img-fluid" src="../Grafiken/Portfolio/Itweb.png">
+              <img class="img-fluid" alt="itweb Glossar" src="../Grafiken/Portfolio/Itweb.png">
             </a>
           </div>
           <div class="item adobe col-sm-6 col-md-4 col-lg-4 mb-4">
