--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -159,39 +159,39 @@
             </a>
           </div>
           <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/CoomingSoon.html" class="item-wrap fancybox">
+            <a href="https://github.com/Avatok/FiveM-Blips-v1" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>[Standalone] FiveM Blips v1</h3>
                 <span>Lua Scripting</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_4.jpg">
+              <img class="img-fluid" alt="FiveM Blips v1" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
           <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/CoomingSoon.html" class="item-wrap fancybox">
+            <a href="https://github.com/Avatok/FiveM-Blips-v2" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>[Standalone] FiveM Blips v2</h3>
                 <span>Lua Scripting</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_4.jpg">
+              <img class="img-fluid" alt="FiveM Blips v2" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
           <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/CoomingSoon.html" class="item-wrap fancybox">
+            <a href="https://github.com/Avatok/FiveM-Exec-Command-Ped" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>[Standalone] FiveM Exec Command Ped</h3>
                 <span>Lua Scripting</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_4.jpg">
+              <img class="img-fluid" alt="FiveM Exec Command Ped" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
           <div class="item coding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/CoomingSoon.html" class="item-wrap fancybox">
+            <a href="https://github.com/Avatok/FiveM-Talking-Ped" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>[Standalone] FiveM Talking Ped</h3>
                 <span>Lua Scripting</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_4.jpg">
+              <img class="img-fluid" alt="FiveM Talking Ped" src="../Grafiken/Portfolio/Lua.png">
             </a>
           </div>
           <div class="item other col-sm-6 col-md-4 col-lg-4 mb-4">
