--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     Headset - Beyerdynamic DT 770 Pro (80 Ohm)<br>
                     Microphone - AUNA MIC 900B<br>
                     Speaker - Logitech Z906<br>
-                    Special Gadget - Elgato Stream Deck<br>
+                    Special Gadget - Elgato Stream Deck Mini<br>
                     Webcam - Streamplify Cam (FullHD/60FPS)<br>
 <br>
 <br>
@@ -150,7 +150,6 @@
                     Keyboard - Corsair K55 RGB PRO XT<br>
                     Mice - Corsair M55 RGB Pro black<br>
                     Headset - Corsair HS60 Pro<br>
-                    Microphone - AUNA MIC 900B<br>
                     Speaker - Trust GXT 38<br>
 <br>
                     <b>Monitor Setup:</b><br>
