--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -195,12 +195,12 @@
             </a>
           </div>
           <div class="item other col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="Portfolio/CoomingSoon.html" class="item-wrap fancybox">
+            <a href="https://www.feinesfutter.at/" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Wordpress WooCoomerce Betreuung</h3>
                 <span>WooCoomerce Artikel einfügen, bearbeiten und löschen</span>
               </div>
-              <img class="img-fluid" src="assets/img/img_4.jpg">
+              <img class="img-fluid" alt="Feines Futter" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
         </div>
