--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -203,6 +203,15 @@
               <img class="img-fluid" alt="Feines Futter" src="../Grafiken/Portfolio/FeinesFutter.png">
             </a>
           </div>
+          <div class="item other col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="https://avatok.github.io/WebSnakeGame/" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Web Snake Game</h3>
+                <span>HTML, CSS, JavaScript und Bootstrap</span>
+              </div>
+              <img class="img-fluid" alt="Web Snake Game" src="../Grafiken/Portfolio/Snake.png">
+            </a>
+          </div>
         </div>
       </div>
     </section><!-- End  Works Section -->
