--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -43,14 +43,6 @@
             <h3>Pascal (Avatok)</h3>
             <h5>Digital Creator</h5>
             <br><br>
-            <!--Call to Action-->
-            <div class="cta p-3 bg-light">
-                <h4>Folge mir auf Social Media oder kontaktiere mich!</h4>
-                <p>Entdecke meine neuesten Projekte, bleibe auf dem Laufenden und trete in Kontakt mit mir!</p>
-                <a href="Contact.html" class="btn btn-primary m-2">Kontaktieren</a>
-                <a href="https://linktr.ee/avatok" class="btn btn-outline-secondary m-2">Social Media</a>
-            </div>
-            <br><br>
             <div class="row text-center">
                 <div class="col">
                     <b>_avatok_</b><br>
@@ -84,23 +76,39 @@
             <div id="carouselTestimonials" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../Grafiken/placeholder1.jpg" class="d-block w-100" alt="Testimonial 1">
+                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Partner Projekt 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="../Grafiken/placeholder2.jpg" class="d-block w-100" alt="Testimonial 2">
+                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Partner Projekt 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="../Grafiken/placeholder3.jpg" class="d-block w-100" alt="Testimonial 3">
+                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Partner Projekt 3">
+                    </div>
+                    <div class="carousel"></div>
+                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Partner Projekt 3">
+                    </div>
+                    <div class="carousel"></div>
+                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Partner Projekt 3">
+                    </div>
+                    <div class="carousel"></div>
+                        <img src="https://placehold.co/600x400" class="d-block w-100" alt="Partner Projekt 3">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselTestimonials" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Zurück</span>
+                    <span class="visually-hidden">Back</span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselTestimonials" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Weiter</span>
+                    <span class="visually-hidden">Further</span>
                 </button>
+            </div>
+            <!--Call to Action-->
+            <div class="cta p-3 bg-light">
+                <h4>Follow me on social media or contact me!</h4>
+                <p>Discover my latest projects, stay up to date and get in touch with me!</p>
+                <a href="Contact.html" class="btn btn-primary m-2">Contact</a>
+                <a href="https://linktr.ee/avatok" class="btn btn-outline-secondary m-2">Social Media</a>
             </div>
         </div>
     </section>
